# cosy-draft

./: .gitignore  404.html  CITATION.cff  README.md  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: check-docs.yml  checks.yml  deploy-docs.yml  pr-rules-main.yml  pr-rules-reminder.yml  pr-rules.yml  release.yml  test.yml
about/authors/: index.html
assets/badges/: mypy.json
benchmarks/: test_benchmark_labyrinth_clsp_no_loop_generate_and_test.py  test_benchmark_maze.py  test_benchmark_maze_contains.py  test_benchmark_maze_loopfree.py  test_benchmark_maze_loopfree_virtual_literal.py
bibliographies/: applications.bib
docs/: index.md  quick-start.md
docs/.overrides/partials/: copyright.html
docs/about/: authors.md
docs/assets/badges/: mypy.json
docs/bibliographies/: applications.bib  theory.bib
docs/examples/: introduction.md
docs/features/: advanced.md  constraints.md  predicates.md
docs/guidelines/: best-practice.md  troubleshoot.md
docs/stylesheets/: extra.css
examples/: example_constraints.py  example_fibonacci.py  example_fibonacci_linear.py  example_robotics.py
examples/SUMMARY/: index.html
examples/example_constraints/: index.html
examples/example_fibonacci/: index.html
examples/example_fibonacci_linear/: index.html
examples/introduction/: index.html
features/advanced/: index.html
features/constraints/: index.html
features/predicates/: index.html
getting-started/: index.html
guidelines/best-practice/: index.html
guidelines/troubleshoot/: index.html
quick-start/: index.html
reference/SUMMARY/: index.html
reference/cosy/__init__/: index.html
reference/cosy/_version/: index.html
reference/cosy/combinatorics/: index.html
reference/cosy/dsl/: index.html
reference/cosy/inspector/: index.html
reference/cosy/solution_space/: index.html
reference/cosy/subtypes/: index.html
reference/cosy/synthesizer/: index.html
reference/cosy/tree/: index.html
reference/cosy/types/: index.html
scripts/: gen_example_pages.py
search/: search_index.json
src/cosy/: __init__.py  combinatorics.py  dsl.py  inspector.py  solution_space.py  subtypes.py  synthesizer.py  tree.py  types.py
stylesheets/: extra.css
tests/: test_infinite_enumeration.py  test_literal_candidates.py
tests/benchmarks/: test_benchmark_labyrinth_clsp_no_loop_generate_and_test.py  test_benchmark_maze_loopfree_virtual_literal.py  test_maximal_elements.py
tests/regressions/: test_combinatorics.py  test_contains_tree.py  test_literal_candidates.py  test_no_prune.py
