[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "combinatory-synthesizer"
dynamic = ["version"]
description = 'Type based synthesis framework using inhabitation in FCLP'
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Constantin Chaumet", email = "constantin.chaumet@tu-dortmund.de" },
  { name = "Andrej Dudenhefner", email = "andrej.dudenhefner@cs.tu-dortmund.de" },
  { name = "Felix Laarmann", email = "felix.laarmann@tu-dortmund.de" },
  { name = "Christoph Stahl", email = "christoph.stahl@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jekannadar/cosy#readme"
Issues = "https://github.com/Jekannadar/cosy/issues"
Source = "https://github.com/Jekannadar/cosy"

[tool.hatch.version]
path = "src/cosy/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cosy"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cosy tests}"

[tool.coverage.run]
source_pkgs = ["cosy", "tests"]
branch = true
parallel = true
omit = [
  "src/cosy/__about__.py",
]

[tool.coverage.paths]
cosy = ["src/cosy", "*/cosy/src/cosy"]
tests = ["tests", "*/cosy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "FBT", # bools as args
]

