[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "combinatory-synthesizer"
dynamic = ["version"]
description = 'Type based synthesis framework using inhabitation in FCLP'
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Constantin Chaumet", email = "constantin.chaumet@tu-dortmund.de" },
  { name = "Andrej Dudenhefner", email = "andrej.dudenhefner@cs.tu-dortmund.de" },
  { name = "Felix Laarmann", email = "felix.laarmann@tu-dortmund.de" },
  { name = "Christoph Stahl", email = "christoph.stahl@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jekannadar/cosy#readme"
Issues = "https://github.com/Jekannadar/cosy/issues"
Source = "https://github.com/Jekannadar/cosy"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cosy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cosy"]



[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10"]


[tool.coverage.run]
source_pkgs = ["cosy", "tests"]
branch = true
parallel = true
omit = [
  "src/cosy/__about__.py",
]

[tool.coverage.paths]
cosy = ["src/cosy", "*/cosy-draft/src/cosy"]
tests = ["tests", "*/cosy-draft/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod"
]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*" = [
  "FBT",
]
"**/examples/**/*" = [
  "T201",
  "INP001"
]
"**/benchmarks/**/*" = [
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
  "FBT",
]

